# assignment-checker-system

./: .gitignore  Anchor.toml  README.md
program_client/: Cargo.toml
program_client/src/: lib.rs
programs/assignment_checker/: Cargo.toml
programs/assignment_checker/src/: lib.rs
programs/assignmentchecker/: Cargo.toml
programs/assignmentchecker/src/: lib.rs
programs/course_batch_manager/: Cargo.toml
programs/course_batch_manager/src/: lib.rs
programs/course_manager/: Cargo.toml
programs/course_manager/src/: lib.rs
programs/evita/: Cargo.toml
programs/evita/src/: lib.rs
tests/: assignmentchecker.ts
trdelnik-tests/: Cargo.toml
trdelnik-tests/tests/: test.rs
