[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
trdelnik-client = { version = "0.1", package = "trdelnik-sandbox-client" }
program_client = { path = "../program_client" }
anchor-spl = "0.24.2"


[dev-dependencies.assignmentchecker]
path = "../programs/assignmentchecker"
