[package]
name = "trdelnik-tests"
version = "0.1.0"
description = "Created with Trdelnik"
edition = "2021"

[dev-dependencies]
fehler = "1.0.0"
rstest = "0.12.0"
anchor-spl = "0.24"

[dev-dependencies.trdelnik-client]
version = "0.1"

[dev-dependencies.program_client]
path = "../.program_client"

[dev-dependencies.assignment_checker]
path = "../programs/assignment_checker"

[dev-dependencies.course_manager]
path = "../programs/course_manager"

[dev-dependencies.course_batch_manager]
path = "../programs/course_batch_manager"
