[package]
name = "assignment_checker"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "assignment_checker"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24"
anchor-spl = "0.24"
borsh = "0.9"
course_manager = { "version" = "0.1", path = "../course_manager", features = ["no-entrypoint"] }
