[package]
name = "course_batch_manager"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "course_batch_manager"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.0"
anchor-spl = "0.24"
course_manager = { "version" = "0.1", path = "../course_manager", features = ["no-entrypoint"] }
assignment_checker = { "version" = "0.1", path = "../assignment_checker", features = ["no-entrypoint", "cpi"] }
